--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,13 @@
     "eslint": "^7.27.0",
     "express": "^4.17.1",
     "jest": "^27.0.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "morgan": "^1.10.0",
     "node": "^16.1.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
